--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "yup": "^1.0.0"
   }
 }
